# SL

./: .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  GitHelp.text  Readme.md  mac_remove_semaphore.sh  remove_semaphore.sh
IAS/MexLib/: FloatingBaseMethods.h  FwdDynAndKinRobot.h  FwdDynRobot.h  NDObjectRobot.h  NumericDerivation.h  NumericDerivationObject.h  QuatToEulerAngle.h  README  Randn.h
IAS/MexLib/SharedLibInterfaces/: MexComputeEFTraj.cpp  MexComputeJacobian.cpp  MexFwdDyn.cpp  MexSimControls.cpp  MexSimTraj.cpp
IAS/include/: Objects.h  SL_episodic_comm_utils.h  SL_episodic_communication.h  ddmp.h  ext_vision.h  ias_matrix_utilities.h  ias_motor_utilities.h  ias_utilities.h  newton.h  quat_tools.h  trajectories.h
IAS/include/pmps/: bsxfun.h  calcGains.h  calcPhi.h  calcSysCov.h  calcSysNoise.h  pmps.h
IAS/include/pmps/basis/: basisGaussNorm.h  basisGeneric.h  basisVonMises.h
IAS/include/pmps/system/: linearSystem.h
IAS/matlab/: GenericTask_TEMPLATE.m  SLGetEpisode.m  SLGetEpisodeMex.c  SLGetInfoMex.c  SLInitEpisode.m  SLResetEpisode.m  SLSendController.m  SLSendTrajectory.m  SLSendTrajectoryMex.c  ias_matlab_utilities.c  ias_matlab_utilities.h
IAS/src/: SL_episodic_comm_utils.c  ddmp.c  ext_vision.c  ias_matrix_utilities.c  ias_motor_utilities.c  ias_utilities.c  newton.c  quat_tools.c  sharedmemory.c  trajectories.c
IAS/src/gen_tasks/: CMakeLists.txt  blob_tracking_task.c  gen_mat_ctl.c  gen_matlab_task.c  grav_comp_task.c  grid_goto_task.c  pmps_task.c  spline_task.c  teach_in_ddmp_task.c  vision_calib_servo.c  vision_calib_task.c
IAS/src/pmps/: bsxfun.c  calcGains.c  calcPhi.c  calcSysCov.c  calcSysNoise.c  pmps.c
IAS/src/pmps/basis/: basisGaussNorm.c  basisVonMises.c
IAS/src/pmps/matlab/: MakeScript.bash  bsxfunMex.c  calcGainsMex.c  calcPhiMex.c  calcSysCovMex.c  calcSysNoiseMex.c  pmpsExecuteStepMex.c
IAS/src/pmps/matlab/basis/: basisGaussNormMex.c  basisVonMisesMex.c
IAS/src/pmps/matlab/system/: linearSystemMex.c
IAS/src/pmps/system/: linearSystem.c
IAS/vision/optitrack/: CMakeLists.txt  OptiTrack.cpp  OptiTrackParser.cpp  OptiTrackParser.h  OptitrackProc.c
RigidBodyDynamics/: RigidBodyDynamics.m
SL/: CMakeLists.txt
SL/include/: SL.h  SL_collect_data.h  SL_openGL.h  SL_shared_memory.h  SL_task_servo.h  SL_user_common.h  SL_user_main_core.h  SL_vision_servo.h
SL/src/: CMakeLists.txt  SL_collect_data.c  SL_common.c  SL_controller.c  SL_main.c  SL_motor_servo_unix.c  SL_openGL.c  SL_openGL_oscilloscope.c  SL_openGL_servo.c  SL_oscilloscope.c  SL_rmain.c  SL_ros_communicator.cpp  SL_ros_servo.cpp  SL_shared_memory.c  SL_simulation_servo.c  SL_simulation_servo_unix.c  SL_task_servo.c  SL_task_servo_unix.c  SL_vision_proc.c  SL_vision_servo.c  SL_vision_servo_unix.c  SL_vx2unix_wrappers.c
SL/srcUserTemplates/: SL_user_commands.c  SL_user_rvision.c  SL_user_simulation.c  SL_user_vision.c
barrett/: .gitignore  CMakeLists.txt
barrett/config/: Barrett_CalibGains.cf  Barrett_MiscPar.cf  BlobConfidences.cf  CameraSetup.cf  ConfigFiles.cf  ConfigFilesSim.cf  Contacts.cf  Gains.cf  LinkParameters.cf  LinkParametersSim.cf  Objects.cf  ParameterPool.cf  SensorCalibration.cf  SensorFilter.cf  SensorOffset.cf  ServoParameters.cf  ServoParametersSim.cf  StereoParameters.cf  WhichDOFs.cf
barrett/include/: .gitignore  SL_user.h  initUserGraphics.h
barrett/math/: Contact_GJac_math.h  ForDynArt_functions.h  ForDynArt_math.h  ForDynComp_functions.h  ForDynComp_math.h  InertiaMatrix_functions.h  InertiaMatrix_math.h  InvDynArt_functions.h  InvDynArt_math.h  InvDynNE_declare.h  InvDynNE_functions.h  InvDynNE_math.h  LEKin_contact.h  LInfo_math.h  OpenGL.h  PE_math.h  WAM-CoordinateSystems.cvx  barrett.dyn  barrett.nb  barrett_new.nb
barrett/matlab/: BallOnBeam_example.m  BeerPong_example.m  BeerPong_exampleTrajectory.mat  GenericTask_example.m
barrett/prefs/: JinvWeights  barrett_sample.script  default.sine  default_script  motor_sample.script  sim_sample.script  task_default.osc  task_default.script  task_sample.script  test.sine  vision_default.pp  zero.sine
barrett/src/: SL_user_common.c  SL_user_openGL.c  initUserGraphics.c  initUserSimulation.c  initUserTasks.c
barrett/src/ball_following/: CMakeLists.txt  ball_following_task.c
barrett/src/ball_on_beam/: CMakeLists.txt  ballonbeam.h  ballonbeam_env.h  ballonbeam_graphics.c  ballonbeam_sim.c  ballonbeam_task.c
barrett/src/beerpong/: CMakeLists.txt  beerpong.h  beerpong_env.h  beerpong_graphics.c  beerpong_sim.c  beerpong_task.c  w_beerpong.txt
clmc/: clmcplot_functions.m
cmake/: add_common_sources.cmake  add_common_targets.cmake  add_matlab_shared_mem.cmake  add_shared_lib_interface.cmake  build_mex_macro.cmake  detect_machtype.cmake  find_matlab.cmake  ias_common.cmake  sl_task_auto_detect.cmake
docs/: How to communicate between servos using shared memory.md  How to debug SL with gdb.md  How to read data from SL using Python.md  How to record data in SL.md  How to run SL in CLion.md  How to use Matlab interface.md  How to use the ROS servo.md  How to write a new task.md  Readme.md
docs/SL-Report/: Bibliography.bib  SL-Report.tex
docs/barebone/: CMakeLists.txt  barebone.h  barebone_env.h  barebone_graphics.c  barebone_sim.c  barebone_task.c
lwpr/: CMakeLists.txt
lwpr/src/: CMakeLists.txt
utilities/: CMakeLists.txt
utilities/src/: CMakeLists.txt  utility.c
